Changelog
=========

1.3.0 (unreleased)
------------------

* ...

1.2.2 (2012/05/02)
------------------

* Update to use the latest ``grokcore.component`` and ``grokcore.view``.

1.2.1 (2012/04/27)
------------------

* Improve the sorting support on components (fields, actions, widgets).

* Add a ``delete`` method to the data manager.

* Now use ``grokcore.chameleon`` instead of ``megrok.chameleon``.

* Add the missing ``static`` to a form default_namespace template.

1.2 (2011/11/08)
----------------

* This version no longer support Zope 2 before 2.12.

* And an helper to know if a field is hidden (so you don't display the
  label).

* Support a callable to know if a field is required (the callable
  takes the form as parameter).

* Add the HTML 5 attribute required by default in the widgets. Use
  novalidate attribute on your form tag if you want to disable it.

* Improve error reporting. A widget can now return a collection of
  error (usefull is the widget is composed of more sub-widgets).

* Extend API for ``dataValidator`` and widget ``prepareRequestValue``.

* Add support for CompoundActions (actions implemented by different
  action collections).

* ``updateActions`` now return the form on which the action have been
  executed. This is usefull in case of sub-forms.


1.1 (2011/02/01)
----------------

* ``zeam.form.base`` now uses the latest ``grokcore.view`` template
  grokker.

* Dependencies have been updated for the latest grokcore and megrok
  packages.


1.0 (2010/10/19)
----------------

* Translation have been completed and reviewed in Dutch, French and
  German.

* An infrastructure to write generic validatators on all fields have
  been added (``dataValidators`` on a ``FormData``).

* Field ``getDefaultValue`` and ``defaultValue`` now take a
  parameter, the form itself. It allows you to compute a default value
  that needs the context.

* Some extraction issues have been fixed: a field which is not