@@ -4,7 +4,8 @@ Changelog
 1.3.0 (unreleased)
 ------------------
 
-* ...
+* ``grokcore.chameleon`` is able to negociate i18n by himself. Remove
+  the ``i18nLanguage`` attribute that was an hack.
 
 1.2.2 (2012/05/02)
 ------------------
